--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,12 @@ pycparser==2.20
 Pygments==2.6.1
 python-dotenv==0.14.0
 python-telegram-bot==12.8
+pytz==2020.1
 requests==2.24.0
 six==1.15.0
 tornado==6.0.4
 traitlets==4.3.3
+tzlocal==2.1
 urllib3==1.25.10
 validators==0.18.0
 wcwidth==0.2.5
